# umst-formal

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORMAL_FOUNDATIONS.md  GNUmakefile  LICENSE  Makefile  PROOF-STATUS.md  README.md  SAFETY-LIMITS.md  requirements-visuals.txt  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  formal.yml  haskell.yml  lean.yml
Agda/: Activation.agda  DIB-Kleisli.agda  Gate.agda  Helmholtz.agda  Makefile  Naturality.agda  PrimeSpectralGuidance.agda  README.md  umst-formal.agda-lib
Agda/Compat/: Gate.agda
Agda/Concrete/: Gate.agda  Helmholtz.agda
Agda/Core/: Gate.agda
Coq/: Constitutional.v  Extraction.v  Gate.v  InfoTheory.v  LandauerEinsteinBridge.v  Makefile  MeasurementCost.v  PrimeSpectralGuidance.v  README.md  _CoqProject
Coq/Compat/: Gate.v
Coq/Concrete/: Gate.v
Coq/Core/: Gate.v
Docs/: Architecture-Invariants.md  COMPREHENSIVE-FORMAL-PLAN.md  COUNT-METHODOLOGY.md  DOCUMENTATION-COVERAGE-PLAN.md  FALSIFIABILITY_DASHBOARD.md  FORMAL-PHYSICS-DERIVATION-PLAN.md  FORMAL-PHYSICS-ROADMAP.md  FP-Primer.md  IMPROVEMENTS-SINCE-ORIGIN.md  OnePager-Categorical.tex  PRIME_SPECTRAL_UMST_DESIGN.md  PROOF-REPLAY.md  Video-Demo-Placeholder.md
Haskell/: FFI.hs  KleisliDIB.hs  PrimeSpectralGuidance.hs  README.md  UMST.hs  cabal.project  umst-formal.cabal
Haskell/UMST/: Compat.hs  Concrete.hs  Core.hs
Haskell/test/: AbiSmoke.hs  CreditGreedy.hs  Dignity.hs  EtaCog.hs  FFICorrespondence.hs  MedianConvergence.hs  OrderStatisticsBand.hs  RhoEstimator.hs  Test.hs
Haskell/tools/: AbiCheck.hs
Lean/: Activation.lean  Adjoint.lean  BurdenRecursionIsAdmissible.lean  ClassicalMeasurementCost.lean  Constitutional.lean  Convergence.lean  CreditGreedyOptimal.lean  DEC.lean  DIBKleisli.lean  Dignity.lean  DualLedger.lean  EconomicTemperature.lean  EndConditions.lean  EnrichedAdmissibility.lean  EtaCog.lean  FiberedActivation.lean  FormalFoundations.lean  GaloisGate.lean  Gate.lean  GraphProperties.lean  Helmholtz.lean  InfoTheory.lean  JenningsGelSpace.lean  LandauerExtension.lean  LandauerLaw.lean  MeasurementCost.lean  MedianConvergence.lean  MonoidalState.lean  Naturality.lean  OrderStatisticsBand.lean  Powers.lean  PrimeSpectralCategory.lean  PrimeSpectralGuidance.lean  RegimeSoundness.lean  RhoEstimator.lean  SeparationBound.lean  StochasticBurdenExpectation.lean  _check_ext.lean  lake-manifest.json  lakefile.lean
Lean/Behavior/: SDFCanonical.lean
Lean/Compat/: Constitutional.lean  Gate.lean
Lean/Concrete/: Activation.lean  Convergence.lean  EndConditions.lean  EnrichedAdmissibility.lean  GaloisGate.lean  Gate.lean  GraphProperties.lean  Helmholtz.lean  Powers.lean  State.lean
Lean/Core/: Constitutional.lean  Gate.lean  Scalar.lean  State.lean
Lean/Crypto/: Collision.lean  Composability.lean  CryptoHypothesis.lean  EUF_CMA.lean  LWE.lean  SanitizePatternCoverage.lean  SideChannel.lean
Lean/Economic/: BurdenRecursionIsAdmissible.lean  CollectiveCoherenceCost.lean  CreativeExplorationTolerance.lean  CreativityBudget.lean  DynamicEpsilonCalibration.lean  EconomicDomain.lean  EconomicTemperature.lean  EpistemicSensingModule.lean  HallucinationDetector.lean  HorizonAwareGrounding.lean  KleisliAdmissibilityComposition.lean  LowEntropyLieDetector.lean  NPVIsSpecialCaseOfThermodynamicBurden.lean  NuanceIsolator.lean  PhysicsConstrainedAI.lean  SelfReferentialEconomicTensor.lean  StochasticBurdenExpectation.lean  ThermodynamicUncertaintyCertificate.lean
Lean/Memory/: MergeSafe.lean  TierDisjoint.lean
Lean/Real/: Gate.lean  State.lean
Lean/experiments/: AutoExperimenterPlaceholder.lean  README.md
Lean/scripts/: print_axioms.lean
artifacts/: catalog.json  catalog.lock.json
ffi-bridge/: Cargo.toml  rust-toolchain.toml
ffi-bridge/include/: umst_ffi.h
ffi-bridge/src/: lib.rs
ffi-bridge/tests/: integration.rs
scripts/: check-formal-environment.sh  check-markdown-links.sh  check_lean_axioms.py  check_lean_sorry.sh  check_print_axioms.sh  check_shared_lean_drift.sh  expected_lean_declaration_snapshot.json  generate_visuals.py  lean_declaration_stats.py  markdown-link-check.json  regenerate_lean_catalog.sh  verify_science_cartridge.sh
visuals/fixtures/: burden_series.json
