[package]
name = "umst-ffi-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Santhosh Shyamsundar", "Santosh Prabhu Shenbagamoorthy"]
description = "C-ABI bridge exposing umst-core thermodynamic gate to Haskell/OCaml."
license = "MIT"

[dependencies]
# MaOS-Workspace layout: prototype lives at workspace root `umst-prototype/`.
umst-core = { path = "../../umst-prototype/src/rust/core" }
umst-math = { path = "../../tytolabs-egoff/umst-math" }

[lib]
name = "umst_ffi"
# rlib is required for integration tests (tests/ directory).
# cdylib/staticlib are for Haskell and OCaml consumers respectively.
crate-type = ["rlib", "cdylib", "staticlib"]

[[test]]
name = "integration"
path = "tests/integration.rs"