[package]
name = "umst-ffi-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Santhosh Shyamsundar", "Santosh Prabhu Shenbagamoorthy"]
description = "Material-agnostic C-ABI thermodynamic gate (manifold + umst-math)."
license = "MIT"

[dependencies]
umst-manifold = { path = "../../umst-manifold", default-features = false, features = ["ndarray"] }
umst-math = { path = "../../umst-manifold/umst-math" }

[lib]
name = "umst_ffi"
# rlib is required for integration tests (tests/ directory).
# cdylib/staticlib are for Haskell and OCaml consumers respectively.
crate-type = ["rlib", "cdylib", "staticlib"]

[[test]]
name = "integration"
path = "tests/integration.rs"